# SWAT_model_dev

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
LaTex_docs/: swat_model.tex
bug_reports/: 2026-05-03_latex_vs_code_reconciliation.md
exports/swat_v2_verified/: MANIFEST.json
exports/swat_v2_verified/model/: _plant.py  estimation.py  simulation.py
models/swat/: control.py
scenarios/: 14d_set_A_healthy.py  14d_set_B_amplitude.py  14d_set_C_recovery.py  14d_set_D_phase_shift.py  14d_set_E_overtrained.py  14d_set_F_sedentary.py  README.md  _common.py
tests/: test_obs_consistency.py  test_plant_regression_scenarios.py  test_reconciliation.py
tools/: analyze_identifiability.py  audit_stiffness.py  export_to_framework.py  verify_controller.py  verify_likelihood.py
